minor splash screen update

--- a/Fiddle Chat App/splashscreen.html
+++ b/Fiddle Chat App/splashscreen.html
@@ -45,12 +45,20 @@
         .splashscreen-content-page h1{
             color: #E6E6E6;
             font-size: 30px;
+            width: 380px;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            word-wrap: break-word;
             margin-bottom: 20px;
         }
 
         .splashscreen-content-page h2{
             color: #E6E6E6;
             font-size: 18px;
+            width: 380px;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            word-wrap: break-word;
             margin-top: 20px;
         }
     </style>
