updated styles, docs and tauri config

--- a/Fiddle Chat App/index.html
+++ b/Fiddle Chat App/index.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="script-src https://apis.google.com/
+        'self' 'unsafe-inline'"
+    />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="script-src http://developers.google.com/
+        'self' 'unsafe-inline'"
+    />
     <title>Fiddle Chat App</title>
   </head>
 
