Remove backdrop-filter property from CSS styles

--- a/Fiddle Chat App/splashscreen.html
+++ b/Fiddle Chat App/splashscreen.html
@@ -45,11 +45,11 @@
             width: 300px;
             height: 400px;
             background: rgba(37, 37, 37, 0.05);
-            backdrop-filter: blur(35px);
             display: flex;
             justify-content: center;
             align-items: center;
             flex-direction: column;
+            overflow: hidden;
         }
         
         .splashscreen-content-page h1{
