--- a/Fiddle Chat App/index.html
+++ b/Fiddle Chat App/index.html
@@ -6,17 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       http-equiv="Content-Security-Policy"
-      content="script-src https://apis.google.com/ https://github.com
-        'self' 'unsafe-inline'"
-    />
-    <meta
-      http-equiv="Content-Security-Policy"
-      content="script-src http://developers.google.com/ https://github.com
+      content="script-src http://developers.google.com/ https://apis.google.com/ https://github.com
         'self' 'unsafe-inline'"
     />
     <title>Fiddle Chat App</title>
   </head>
-
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
