update version number and added more allowed api's

--- a/Fiddle Chat App/index.html
+++ b/Fiddle Chat App/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       http-equiv="Content-Security-Policy"
-      content="script-src http://developers.google.com/ https://apis.google.com/ https://github.com
-        'self' 'unsafe-inline'"
+      content="script-src http://*.developers.google.com/** https://*.apis.google.com/** https://*.github.com/** https://localhost/** tauri://localhost/** 'self' 'unsafe-inline'"
     />
     <title>Fiddle Chat App</title>
   </head>
